--- a/netlify.toml
+++ b/netlify.toml
@@ -2,15 +2,17 @@
   command = "npm install && npm run build"
   publish = "dist"
   base = "/"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--no-optional"
+  CI = "true"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--no-optional"
 
 [[headers]]
   for = "/*"
