--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npm run build"
+  command = "npm ci && npm run build"
   publish = "dist"
   base = "/"
   ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
@@ -8,6 +8,8 @@
   NODE_VERSION = "18"
   NPM_FLAGS = "--no-optional"
   CI = "true"
+  NETLIFY_USE_YARN = "false"
+  NETLIFY_USE_NPM = "true"
 
 [[redirects]]
   from = "/*"
