--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
