--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,6 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "npm run build"
   publish = "dist"
-  base = "/"
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--no-optional"
-  CI = "true"
-  NETLIFY_USE_YARN = "false"
-  NETLIFY_USE_NPM = "true"
 
 [[redirects]]
   from = "/*"
