--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "generate:images": "node scripts/generate-images.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
